Added KmBox C# API

--- a/squad-dma.csproj
+++ b/squad-dma.csproj
@@ -48,6 +48,7 @@
 
 	<ItemGroup>
 	  <Folder Include="Icons\" />
+	  <Folder Include="KmBoxNet\" />
 	  <Folder Include="Resources\" />
 	</ItemGroup>
 
